--- a/templates/cchs_nutrition-en.html
+++ b/templates/cchs_nutrition-en.html
@@ -146,10 +146,13 @@
 
             <div class="container-fluid">
                 <h2 class="mrgn-tp-0">Nutrition Data Visualisation</h2>
+
                 {# Dropdown menus for filtering chart data #}
                 <fieldset>
                     <h3 class="h6 mrgn-tp-0 mrgn-rght-0 mrgn-bttm-sm">
-                        <span id="ContentPlaceHolder_Body_LabelStep1" class="text-danger">Select item(s) from each list below:</span>
+                        <span id="ContentPlaceHolder_Body_LabelStep1" class="text-danger">
+                            Select item(s) from each list below:
+                        </span>
                     </h3>
                     <div class="form-group-sm">
                         <label for="yearDropdown">Year</label>
