--- a/static/css/geochart.css
+++ b/static/css/geochart.css
@@ -1,8 +1,12 @@
 .region-borders {
-  fill: none;
-  stroke: #000000;
-  stroke-width: 1px;
-  stroke-linejoin: round;
-  stroke-linecap: round;
-  pointer-events: none;
+    fill: none;
+    stroke: #000000;
+    stroke-width: 1px;
+    stroke-linejoin: round;
+    stroke-linecap: round;
+    pointer-events: none;
+}
+
+g.tick {
+    font-size: 10pt;
 }
