--- a/templates/cchs_nutrition_geo-en.html
+++ b/templates/cchs_nutrition_geo-en.html
@@ -159,6 +159,8 @@
                         <div id="yearDropdown" class="chart-selector"></div>
                         <label for="sexDropdown">Sex</label>
                         <div id="sexDropdown" class="chart-selector"></div>
+                        <label for="ageDropdown">Age Group</label>
+                        <div id="ageDropdown" class="chart-selector"></div>
                         <label for="nutrientDropdown">Nutrient</label>
                         <div id="nutrientDropdown" class="chart-selector"></div>
                     </div>
@@ -172,13 +174,19 @@
                         Hover over any region on the map with your mouse cursor to see detailed data.</p>
                 </div>
 
+                {# Text for tooltip goes here #}
+                <section id="tooltip-box" class="lnkbx well"></section>
+
             </div>
 
 
         </div>
 
         {# Main bar chart is populated here #}
-        <div id="geochart" class="col-lg-6 col-md-6 col-sm-12 brdr-lft" style="overflow:visible" align="center"></div>
+        <div class="col-lg-7 col-md-7 col-sm-12 brdr-lft" style="overflow:visible">
+            <div id="geochart" align="center"></div>
+            <div id="geolegend" style="overflow:visible" align="center"></div>
+        </div>
 
     </div>
 
@@ -251,6 +259,7 @@
 {# d3 #}
 <script src="/static/js/d3.v5.min.js"></script>
 <script src="/static/js/topojson.min.js"></script>
+<script src="/static/js/textures.js"></script>
 
 
 <!--<![endif]-->
