Formatting + static jQuery

--- a/templates/cchs_nutrition-en.html
+++ b/templates/cchs_nutrition-en.html
@@ -167,16 +167,18 @@
                 {# Info window #}
                 <div style="width:100%;margin-top:15px" class="alert alert-info">
                     <p>
-            <span id="ContentPlaceHolder_Body_LabelHIHomeLink1"><a href="https://infobase.phac-aspc.gc.ca/something/">
-                Click here for more information is available about the nutrition data.</a></span>
-                        Hover over any bar in the chart with your mouse cursor to see detailed data.</p>
+                        <span id="ContentPlaceHolder_Body_LabelHIHomeLink1">
+                            <a href="https://infobase.phac-aspc.gc.ca/something/">
+                                Click here for more information is available about the nutrition data.
+                            </a>
+                        </span>
+                        Hover over any bar in the chart with your mouse cursor to see detailed data.
+                    </p>
                 </div>
 
                 {# Text for tooltip goes here #}
                 <section id="tooltip-box" class="lnkbx well"></section>
             </div>
-
-
         </div>
 
         {# Main bar chart is populated here #}
@@ -247,7 +249,8 @@
     </div>
 </footer>
 <!--[if gte IE 9 | !IE ]><!-->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
+{#<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.js"></script>#}
+<script src="/static/wet-boew/js/jquery/2.1.4/jquery.js"></script>
 <script src="/static/wet-boew/js/wet-boew.min.js"></script>
 
 {# d3 #}
