Minor text changes

--- a/templates/cchs_nutrition_geo-en.html
+++ b/templates/cchs_nutrition_geo-en.html
@@ -145,7 +145,7 @@
         <div class="col-lg-5 col-md-5 col-sm-12" style="overflow:visible;">
 
             <div class="container-fluid">
-                <h2 class="mrgn-tp-0">Nutrition Geographic Data Visualisation</h2>
+                <h2 class="mrgn-tp-0">Geographic Data Visualisation</h2>
 
                 {# Dropdown menus for filtering chart data #}
                 <fieldset>
@@ -170,7 +170,7 @@
                 <div style="width:100%;margin-top:15px" class="alert alert-info">
                     <p>
             <span id="ContentPlaceHolder_Body_LabelHIHomeLink1"><a href="https://infobase.phac-aspc.gc.ca/something/">
-                Click here for more information is available about the nutrition data.</a></span></p>
+                Click here for more information about the CCHS nutrition data.</a></span></p>
                 </div>
 
                 {# Text for tooltip goes here #}
