Changed tooltip height height to auto to accommodate new nutrition variables

--- a/static/css/barchart.css
+++ b/static/css/barchart.css
@@ -43,7 +43,7 @@ g.legend rect {
 /* Tooltip formatting */
 #tooltip-box {
     display: inline-block;
-    height: 7em;
+    height: auto;
     position: relative;
     width: 100%;
     margin-bottom: 0.5em;
