--- a/templates/cchs_nutrition_distribution-en.html
+++ b/templates/cchs_nutrition_distribution-en.html
@@ -160,7 +160,7 @@
             <form>
                 <input type="checkbox" id="checkbox2004"> 2004
                 <input type="checkbox" id="checkbox2015"> 2015
-                <input type="checkbox" id="checkboxLimit"> Limit Value
+                <input type="checkbox" id="checkboxLimit"> Limit Value(s)
             </form>
         </div>
 
@@ -176,8 +176,8 @@
                 <div class="form-group-sm">
                     <label for="sexDropdown">Sex</label>
                     <div id="sexDropdown" class="chart-selector"></div>
-                    <label for="provinceDropdown">Region</label>
-                    <div id="provinceDropdown" class="chart-selector"></div>
+{#                    <label for="provinceDropdown">Region</label>#}
+{#                    <div id="provinceDropdown" class="chart-selector"></div>#}
                     <label for="nutrientDropdown">Nutrient</label>
                     <div id="nutrientDropdown" class="chart-selector"></div>
                     <label for="ageDropdown">Age Group</label>
