--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
     <h5><a href="bar">Bar Chart</a></h5>
     <h5><a href="geo">Geographic Visualization</a></h5>
     <h5><a href="distribution">Distribution Visualization</a></h5>
+    <h5><a href="distribution-api">Distribution Visualization (API Backend)</a></h5>
 
 </head>
 <body>
