--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,11 @@
     <title>Visualization Directory</title>
     <h3>Visualization Directory</h3>
 
-    <h5><a href="bar">Bar Chart</a></h5>
-    <h5><a href="geo">Geographic Visualization</a></h5>
-    <h5><a href="distribution">Distribution Visualization</a></h5>
+    <h5><a href="bar">Bar Chart (deprecated)</a></h5>
+    <h5><a href="geo">Geographic Visualization (deprecated)</a></h5>
+    <h5><a href="geo-2015">Geographic Visualization (2015)</a></h5>
+    <h5><a href="distribution">Distribution Visualization (2004 + 2015, deprecated)</a></h5>
+    <h5><a href="distribution-2015">Distribution Visualization (2015)</a></h5>
     <h5><a href="distribution-api">Distribution Visualization (API Backend)</a></h5>
 
 </head>
