--- a/templates/cchs_nutrition_geo-en.html
+++ b/templates/cchs_nutrition_geo-en.html
@@ -12,11 +12,11 @@
           content="Web Experience Toolkit (WET) includes reusable components for building and maintaining innovative Web sites that are accessible, usable, and interoperable. These reusable components are open source software and free for use by departments and external Web communities">
     <!-- Meta data-->
     <!--[if gte IE 9 | !IE ]><!-->
-    <link href="/static/GCWeb/assets/favicon.ico" rel="icon" type="image/x-icon">
-    <link rel="stylesheet" href="/static/GCWeb/css/theme.min.css">
+    <link href="../static/GCWeb/assets/favicon.ico" rel="icon" type="image/x-icon">
+    <link rel="stylesheet" href="../static/GCWeb/css/theme.min.css">
 
     {# Custom barchart css #}
-    <link rel="stylesheet" href="/static/css/geochart.css">
+    <link rel="stylesheet" href="../static/css/geochart.css">
     <!--<![endif]-->
     <!--[if lt IE 9]>
 		<link href="./GCWeb/assets/favicon.ico" rel="shortcut icon" />
@@ -30,7 +30,7 @@
 
     <![endif]-->
     <noscript>
-        <link rel="stylesheet" href="/static/wet-boew/css/noscript.min.css"/>
+        <link rel="stylesheet" href="../static/wet-boew/css/noscript.min.css"/>
     </noscript>
     <!-- Google Tag Manager DO NOT REMOVE OR MODIFY - NE PAS SUPPRIMER OU MODIFIER -->
     <script>dataLayer1 = [];</script>
@@ -73,7 +73,7 @@
         </section>
         <div class="row">
             <div class="brand col-xs-8 col-sm-9 col-md-6">
-                <a href="https://www.canada.ca/en.html"><img src="/static/GCWeb/assets/sig-blk-en.svg" alt=""><span
+                <a href="https://www.canada.ca/en.html"><img src="../static/GCWeb/assets/sig-blk-en.svg" alt=""><span
                         class="wb-inv"> Government of Canada / <span lang="fr">Gouvernement du Canada</span></span></a>
             </div>
             <section class="wb-mb-links col-xs-4 col-sm-3 visible-sm visible-xs" id="wb-glb-mn">
@@ -106,7 +106,7 @@
             </section>
         </div>
     </div>
-    <nav role="navigation" id="wb-sm" data-ajax-replace="/static/ajax/sitemenu-en.html" data-trgt="mb-pnl"
+    <nav role="navigation" id="wb-sm" data-ajax-replace="../static/ajax/sitemenu-en.html" data-trgt="mb-pnl"
          class="wb-menu visible-md visible-lg" typeof="SiteNavigationElement">
         <div class="container nvbar">
             <h2>Topics menu</h2>
@@ -197,7 +197,7 @@
         <button class="btn btn-primary" disabled><span class="glyphicon glyphicon-cloud-download"></span> Chart (.png)
         </button>
         <button role="button" class="btn btn-success"
-                onclick="location.href='/static/data/NutritionByRegion_June2019.csv'">
+                onclick="location.href='../static/data/NutritionByRegion_June2019.csv'">
             <span class="glyphicon glyphicon-cloud-download"></span> Full Dataset (.csv)
         </button>
     </div>
@@ -247,7 +247,7 @@
                     <a href="#wb-cont">Top of Page <span class="glyphicon glyphicon-chevron-up"></span></a>
                 </div>
                 <div class="col-xs-6 col-md-3 col-lg-2 text-right">
-                    <img src="/static/GCWeb/assets/wmms-blk.svg" alt="Symbol of the Government of Canada">
+                    <img src="../static/GCWeb/assets/wmms-blk.svg" alt="Symbol of the Government of Canada">
                 </div>
             </div>
         </div>
@@ -255,13 +255,13 @@
 </footer>
 <!--[if gte IE 9 | !IE ]><!-->
 {#<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.js"></script>#}
-<script src="/static/wet-boew/js/wet-boew.min.js"></script>
-<script src="/static/wet-boew/js/jquery/2.1.4/jquery.js"></script>
+<script src="../static/wet-boew/js/wet-boew.min.js"></script>
+<script src="../static/wet-boew/js/jquery/2.1.4/jquery.js"></script>
 
 {# d3 #}
-<script src="/static/js/d3.v5.min.js"></script>
-<script src="/static/js/topojson.min.js"></script>
-<script src="/static/js/textures.js"></script>
+<script src="../static/js/d3.v5.min.js"></script>
+<script src="../static/js/topojson.min.js"></script>
+<script src="../static/js/textures.js"></script>
 
 
 <!--<![endif]-->
@@ -269,9 +269,9 @@
 		<script src="./wet-boew/js/ie8-wet-boew2.min.js"></script>
 
 		<![endif]-->
-<script src="/static/GCWeb/js/theme.min.js"></script>
+<script src="../static/GCWeb/js/theme.min.js"></script>
 
 
-<script src="/static/js/geochart.js"></script>
+<script src="../static/js/geochart.js"></script>
 </body>
 </html>
