--- a/templates/cchs_nutrition_geo_2015-en.html
+++ b/templates/cchs_nutrition_geo_2015-en.html
@@ -137,7 +137,8 @@
 </header>
 <main role="main" property="mainContentOfPage" class="container">
 
-    <h1 property="name" id="wb-cont">CCHS Nutrition Data (2015)</h1>
+    <h1 property="name" id="wb-cont">Nutrient intakes from food 2015
+</h1>
     <p><strong>From <a href="#">Health Canada</a></strong></p>
 
     <div class="row">
