--- a/templates/cchs_nutrition_geo_2015-en.html
+++ b/templates/cchs_nutrition_geo_2015-en.html
@@ -66,7 +66,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <ul class="list-inline margin-bottom-none">
-                        <li><a lang="fr" href="cchs_nutrition-fr.html">Français</a></li>
+                        <li><a lang="fr" href="#">Français</a></li>
                     </ul>
                 </div>
             </div>
@@ -138,7 +138,7 @@
 <main role="main" property="mainContentOfPage" class="container">
 
     <h1 property="name" id="wb-cont">Nutrient intakes from food 2015
-</h1>
+    </h1>
     <p><strong>From <a href="#">Health Canada</a></strong></p>
 
     <div class="row">
@@ -146,58 +146,138 @@
         <div class="col-lg-5 col-md-5 col-sm-12" style="overflow:visible;">
 
             <div class="container-fluid">
-                <h2 class="mrgn-tp-0">Geographic Data Visualisation</h2>
+                <div class="row">
+                    <section class="alert alert-info">
+                        <p>
+                            For more information on CCHS - Nutrition, please consult the
+                            <a href="https://www.canada.ca/en/health-canada/services/food-nutrition/food-nutrition-surveillance/health-nutrition-surveys/canadian-community-health-survey-cchs/reference-guide-understanding-using-data-2015.html">Reference
+                                Guide to Understanding and Using the Data</a> and the <a href="#">Statistical
+                            Methodology Guide</a>.
+                        </p>
+                    </section>
+                </div>
 
                 {# Dropdown menus for filtering chart data #}
-                <fieldset>
-                    <h3 class="h6 mrgn-tp-0 mrgn-rght-0 mrgn-bttm-sm">
+                <div>
+                    <fieldset>
+                        <h3 class="h6 mrgn-tp-0 mrgn-rght-0 mrgn-bttm-sm">
                         <span id="ContentPlaceHolder_Body_LabelStep1" class="text-danger">
                             Select item(s) from each list below:
                         </span>
-                    </h3>
-                    <div class="form-group-sm">
-                        <label for="sexDropdown">Sex</label>
-                        <div id="sexDropdown" class="chart-selector"></div>
-                        <label for="nutrientDropdown">Nutrient</label>
-                        <div id="nutrientDropdown" class="chart-selector"></div>
-                    </div>
-                </fieldset>
-
-                {# Info window #}
-                <div style="width:100%;margin-top:15px" class="alert alert-info">
-                    <p>
-            <span id="ContentPlaceHolder_Body_LabelHIHomeLink1"><a href="https://infobase.phac-aspc.gc.ca/something/">
-            <span id="ContentPlaceHolder_Body_LabelHIHomeLink1"><a href="https://infobase.phac-aspc.gc.ca/something/">
-                Click here for more information about the CCHS nutrition data.</a></span></p>
+                        </h3>
+                        <div class="form-group-sm">
+                            <label for="sexDropdown">Sex</label>
+                            <div id="sexDropdown" class="chart-selector"></div>
+                            <label for="nutrientDropdown">Nutrient</label>
+                            <div id="nutrientDropdown" class="chart-selector"></div>
+                        </div>
+                    </fieldset>
                 </div>
 
+                <br>
+
                 {# Text for tooltip goes here #}
-                <section class="lnkbx well" style="display: block; overflow: auto; height: auto;">
-                    <div id="tooltip-text"></div>
+                {# TODO: Make this work properly on mobile displays #}
+                <section class="lnkbx well" style="display: block; height: 20em">
+                    <div class="row" style="height: 20%">
+                        <div id="region-detail-text"><i>
+                            Hover your cursor over a region on the map for
+                            additional detail.</i></div>
+                    </div>
+                    <div class="row">
+
+                        {#                        <div class="col-lg-1 col-md-1 col-sm-6">#}
+                        {#                            <br><br>#}
+                        {#                            <button id="previousRegion" class="btn btn-primary pull-left"><small><span#}
+                        {#                                    aria-hidden="true">&lt;&lt;</span><span#}
+                        {#                                    class="wb-invisible">Previous Province</span></small></button>#}
+                        {#                        </div>#}
+
+                        <div class="col-lg-12 col-md-12 col-sm-12">
+                            <div id="region-detail" align="center"></div>
+                        </div>
+                        {##}
+                        {#                        <div class="col-lg-1 col-md-1 col-sm-6">#}
+                        {#                            <br><br>#}
+                        {#                            <button id="nextRegion" class="btn btn-primary pull-right"><small><span#}
+                        {#                                    aria-hidden="true">&gt;&gt;</span><span#}
+                        {#                                    class="wb-invisible">Next Province</span></small></button>#}
+                        {#                        </div>#}
+
+                    </div>
                 </section>
+
+                <section class="lnkbx well" style="display: block; overflow: auto; height: auto;">
+                    <div id="nutrient-notes"></div>
+                </section>
+
             </div>
-
-
         </div>
 
         {# Main bar chart is populated here #}
         <div class="col-lg-7 col-md-7 col-sm-12" style="overflow:visible">
             <div id="geochart" align="center"></div>
             <div id="geolegend" style="overflow:visible" align="center"></div>
+
+            <div class="text-center">
+                <br>
+                <button class="btn btn-sm btn-success" id="saveChart"><span
+                        class="glyphicon glyphicon-cloud-download"></span> Save graph (.png)
+                </button>
+            </div>
         </div>
-
     </div>
 
-    {# Download buttons #}
-    <div class="row" align="center">
-        <br>
-        <button class="btn btn-primary" disabled><span class="glyphicon glyphicon-cloud-download"></span> Chart (.png)
-        </button>
-        <button role="button" class="btn btn-success"
-                onclick="location.href='../static/data/NutritionByRegion_June2019.csv'">
-            <span class="glyphicon glyphicon-cloud-download"></span> Full Dataset (.csv)
-        </button>
+    <div class="row">
+        <div id="distribution-datatable">
+            <h4>Table</h4>
+
+            <table class="wb-tables table table-condensed table-hover cell-border" id="nutrientTable"
+                   data-wb-tables='{"scrollX" : true, "paging": false, "searching": false, "bInfo": false, "buttons": ["csv"]}'>
+                <thead>
+                <tr class="datatable-headers">
+                    <th>Nutrient</th>
+                    <th>Region</th>
+                    <th>Sex</th>
+                    <th>Age (years)</th>
+                    <th>n</th>
+                    <th>Percentage</th>
+                    <th>SE</th>
+                    <th>DRI type</th>
+                    <th>DRI reference value</th>
+                </tr>
+                </thead>
+                <tbody class="datatable-body">
+                {# Rows are autopopulated by JS #}
+                </tbody>
+            </table>
+
+            <caption class="wb-inv">
+                <br>
+                <button class="btn btn-sm btn-success" id="nutrientTableDownload"><span
+                        class="glyphicon glyphicon-cloud-download"></span> Download table (.csv)
+                </button>
+            </caption>
+        </div>
     </div>
+
+    <br>
+        <div class="row">
+            <section class="alert alert-info">
+                <h3>Notes & Legend</h3>
+                <table class="table table-condensed table-responsive">
+                    <tbody>
+                    <tr>
+                        <td><strong>Data Source</strong></td>
+                        <td>Statistics Canada, Canadian Community Health Survey (CCHS) - Nutrition, 2015, Share
+                            Files.
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+
+            </section>
+        </div>
 
     <div class="row">
         <div class="pagedetails">
@@ -209,7 +289,6 @@
             </dl>
         </div>
     </div>
-
 
 </main>
 <footer role="contentinfo" id="wb-info">
@@ -252,8 +331,8 @@
 </footer>
 <!--[if gte IE 9 | !IE ]><!-->
 {#<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.js"></script>#}
-<script src="../static/wet-boew/js/wet-boew.min.js"></script>
 <script src="../static/wet-boew/js/jquery/2.1.4/jquery.js"></script>
+<script src="../static/wet-boew/js/wet-boew.min.js"></script>
 
 {# d3 #}
 <script src="../static/js/d3.v5.min.js"></script>
@@ -267,7 +346,6 @@
 
 		<![endif]-->
 <script src="../static/GCWeb/js/theme.min.js"></script>
-
 
 <script src="../static/js/geochart_2015.js"></script>
 </body>
